# allystar_gnss

./: CMakeLists.txt  Makefile  README.md
app/: main.cpp  serial_linux.cpp  serial_linux.h
